Fix icon button styles, wrong padding

--- a/sass/html/_buttons.scss
+++ b/sass/html/_buttons.scss
@@ -118,8 +118,7 @@
     }
 }
 
-button,
-button:has(> svg) {
+button {
     @include button();
 }
 
